# logseq-compiler

./: CHANGELOG.md  Package.resolved  Package.swift  README.md  pyproject.toml
.github/workflows/: swift.yml
Logseq Compiler/Logseq Compiler/: main.swift
Logseq Compiler/Logseq Compiler.xcodeproj/: project.pbxproj
Logseq Compiler/Logseq Compiler.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Sources/logseq-compiler/: BlockExtensions.swift  Graph.swift  HugoBlock.swift  block.swift  compiler.swift  link-finder.swift  main.swift
Tests/logseq-compilerTests/: logseq_compilerTests.swift
logseq_compiler/: __main__.py  block.py  compiler.py  hugoblock.py  link_finder.py
